syntax = "proto3";

package pb;

import "kullanici.proto";

option go_package = "github.com/1said0/banka_uygulamasi/pb";

message KullaniciOlusturRequest{

    string kullanici_adi=1;
    string sifre=2;
    string email=3;
    
}

message KullaniciOlusturResponse{

    Kullanici kullanici=1;

}